Fix fogbugz #46 (A symbolic link should be allowed for the control file) ... the symbolic link can be supported, it shouldn't be security issue.
git-svn-id: http://monit.googlecode.com/svn/trunk@341 808b68a2-07de-11de-a1f0-819f45317607

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -28,6 +28,8 @@ Version 5.2.5
 
 * AIX: Fix the M/Monit heartbeat. Thanks to Helen Chen for report.
 
+* Support symbolic link to monit configuration file.
+
 
 
 Version 5.2.4
